@@ -24,12 +24,12 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
           dlf->init (argc, argv);
         }
 
-      DANCE_DEBUG (6, (LM_TRACE, DLINFO
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO
                     ACE_TEXT("TargetManager - initializing ORB\n")));
 
       CORBA::ORB_var orb = CORBA::ORB_init (argc, argv);
 
-      DANCE_DEBUG (6, (LM_TRACE, DLINFO
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO
                    ACE_TEXT("TargetManager - initializing module instance\n")));
 
       DAnCE_TargetManager_Module tm;
@@ -37,24 +37,27 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 
       if (!CORBA::is_nil (obj.in ()))
         {
-          DANCE_DEBUG (6, (LM_TRACE, DLINFO
+          DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO
                     ACE_TEXT("TargetManager - running ORB\n")));
           orb->run ();
         }
 
-      DANCE_DEBUG (6, (LM_TRACE, DLINFO
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO
                     ACE_TEXT("TargetManager - destroying ORB\n")));
 
       orb->destroy ();
     }
   catch (const CORBA::Exception& ex)
     {
-      ex._tao_print_exception ("TargetManager");
+      DANCE_ERROR (DANCE_LOG_EMERGENCY,
+                   (LM_EMERGENCY,
+                    ACE_TEXT ("Caught CORBA exception: %C\n"),
+                    ex._info ().c_str ()));
       retval = -1;
     }
   catch (...)
     {
-      DANCE_ERROR (1, (LM_ERROR, "TargetManager - Error: Unknown exception.\n"));
+      DANCE_ERROR (DANCE_LOG_ERROR, (LM_ERROR, "TargetManager - Error: Unknown exception.\n"));
       retval = -1;
     }
 
