@@ -91,21 +91,27 @@ DAnCE_TargetManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
       switch (c)
         {
         case 'd':
-          DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ")
+          DANCE_DEBUG (DANCE_LOG_MAJOR_DEBUG_INFO,
+                       (LM_DEBUG, DLINFO
+                        ACE_TEXT ("Target_Manager_Module::parse_args - ")
                         ACE_TEXT ("Binding to provided Domain Naming Context: '%s'\n"),
                         get_opts.opt_arg ()));
           this->options_.domain_nc_ = get_opts.opt_arg ();
           break;
 
         case 'f':
-          DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ")
+          DANCE_DEBUG (DANCE_LOG_MAJOR_DEBUG_INFO,
+                       (LM_DEBUG, DLINFO
+                        ACE_TEXT ("Target_Manager_Module::parse_args - ")
                         ACE_TEXT ("Output filename for IOR is %s\n"),
                         get_opts.opt_arg ()));
           this->options_.ior_file_ = get_opts.opt_arg ();
           break;
 
         case 'i':
-          DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ")
+          DANCE_DEBUG (DANCE_LOG_MAJOR_DEBUG_INFO,
+                       (LM_DEBUG, DLINFO
+                        ACE_TEXT ("Target_Manager_Module::parse_args - ")
                         ACE_TEXT ("Initial domain file %s\n"),
                         get_opts.opt_arg ()));
           this->options_.domain_descr_ = get_opts.opt_arg ();
@@ -121,7 +127,7 @@ DAnCE_TargetManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
 
         case 0:
             {
-              DANCE_ERROR (1, (LM_ERROR, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ")
+              DANCE_ERROR (DANCE_LOG_ERROR, (LM_ERROR, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ")
                             ACE_TEXT ("ERROR: unknown long option %s\n"),
                             get_opts.long_option ()));
             }
@@ -129,7 +135,7 @@ DAnCE_TargetManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
           break;
 
         default:
-          DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ignoring unknown option %c:%C\n"),
+          DANCE_ERROR (DANCE_LOG_WARNING, (LM_TRACE, DLINFO ACE_TEXT ("Target_Manager_Module::parse_args - ignoring unknown option %c:%C\n"),
                         c, get_opts.opt_arg ()));
         }
 
@@ -149,7 +155,7 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
     {
       if (CORBA::is_nil(orb))
         {
-          DANCE_ERROR (1, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+          DANCE_ERROR (DANCE_LOG_TERMINAL_ERROR, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                        ACE_TEXT ("Attempted to create Target Manager with a nil orb.\n")));
           return CORBA::Object::_nil();
         }
@@ -160,8 +166,8 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
 
       if (ACE_OS::strcmp(orb->id(), this->orb_->id()) != 0)
         {
-          DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
-                       ACE_TEXT ("Resetting TM's orb.\n")));
+          DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+                                             ACE_TEXT ("Resetting TM's orb.\n")));
           this->orb_ = CORBA::ORB::_duplicate (orb);
           this->domain_nc_ = CosNaming::NamingContext::_nil();
         }
@@ -177,7 +183,7 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
         {
           try
             {
-              DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+              DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                            ACE_TEXT ("Resolving DomainNC.\n")));
               CORBA::Object_var domain_obj = this->orb_->string_to_object (this->options_.domain_nc_);
               if (!CORBA::is_nil (domain_obj.in ()))
@@ -185,7 +191,7 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
                   this->domain_nc_ = CosNaming::NamingContext::_narrow (domain_obj.in());
                   if (CORBA::is_nil (this->domain_nc_.in ()))
                     {
-                      DANCE_ERROR (1, (LM_ERROR,DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+                      DANCE_ERROR (DANCE_LOG_TERMINAL_ERROR, (LM_ERROR,DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                                     ACE_TEXT ("Narrow to NamingContext return nil for DomainNC.\n")));
                       return CORBA::Object::_nil ();
                     }
@@ -193,13 +199,14 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
             }
           catch (CORBA::Exception&)
             {
-              DANCE_DEBUG (6, (LM_WARNING, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+              DANCE_DEBUG (DANCE_LOG_ERROR,
+                           (LM_WARNING, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                              ACE_TEXT ("DomainNC context not found!\n")));
             }
         }
 
 
-      DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                     ACE_TEXT ("Initializing the IOR Table\n")));
       // Initialize IOR table
       CORBA::Object_var table_object = orb->resolve_initial_references ("IORTable");
@@ -208,7 +215,7 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
 
       if (CORBA::is_nil (adapter.in ()))
         {
-          DANCE_ERROR (1, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+          DANCE_ERROR (DANCE_LOG_TERMINAL_ERROR, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                          ACE_TEXT ("Unable to RIR the IORTable.\n")));
           return CORBA::Object::_nil ();
         }
@@ -256,7 +263,8 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
               ns_name = ACE_TEXT_ALWAYS_CHAR (this->options_.name_);
             }
 
-          DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+          DANCE_DEBUG (DANCE_LOG_MINOR_EVENT,
+                       (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                        ACE_TEXT ("Registering NM in NC as \"%C\".\n"), ns_name.c_str ()));
           CosNaming::Name name (1);
           name.length (1);
@@ -268,10 +276,10 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
       // Writing ior to file
       if (0 != this->options_.ior_file_)
         {
-          DANCE_DEBUG (9, (LM_TRACE,  DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+          DANCE_DEBUG (DANCE_LOG_MINOR_EVENT, (LM_TRACE,  DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                         ACE_TEXT ("Writing RM IOR %C to file %C.\n"), this->options_.ior_file_, ior.in ()));
           if (!DAnCE::Target_Manager::write_IOR (this->options_.ior_file_, ior.in ()))
-            DANCE_ERROR (1, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+            DANCE_ERROR (DANCE_LOG_ERROR, (LM_ERROR, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                           ACE_TEXT ("Error: Unable to write IOR to file %C\n"),
                           this->options_.ior_file_));
         }
@@ -281,17 +289,20 @@ DAnCE_TargetManager_Module::init (CORBA::ORB_ptr orb,
       mgr->activate ();
 
       // Finishing Deployment part
-      DANCE_DEBUG (6, (LM_NOTICE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+      DANCE_DEBUG (DANCE_LOG_MAJOR_EVENT, (LM_NOTICE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                     ACE_TEXT ("DAnCE_TargetManager is running...\n")));
 
-      DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
+      DANCE_DEBUG (DANCE_LOG_MAJOR_DEBUG_INFO, (LM_DEBUG, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::init - ")
                     ACE_TEXT ("TargetManager IOR: %s\n"), ior.in ()));
 
       return nm_obj._retn ();
     }
   catch (const CORBA::Exception& ex)
     {
-      ex._tao_print_exception ("DAnCE_TargetManager::main\t\n");
+      DANCE_ERROR (DANCE_LOG_TERMINAL_ERROR,
+                   (LM_EMERGENCY,
+                    ACE_TEXT ("Caught CORBA Exception: %C\n"),
+                    ex._info ().c_str ()));
       return CORBA::Object::_nil ();
     }
 }
@@ -301,13 +312,13 @@ DAnCE_TargetManager_Module::create_poas (void)
 {
   DANCE_TRACE("DAnCE_TargetManager_Module::create_poas");
   // Get reference to Root POA.
-  DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
+  DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
                 ACE_TEXT ("Resolving root POA\n")));
   CORBA::Object_var obj = this->orb_->resolve_initial_references ("RootPOA");
 
   this->root_poa_ = PortableServer::POA::_narrow (obj.in ());
 
-  DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
+  DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
                 ACE_TEXT ("Obtaining the POAManager\n")));
   PortableServer::POAManager_var mgr = this->root_poa_->the_POAManager ();
 
@@ -316,7 +327,7 @@ DAnCE_TargetManager_Module::create_poas (void)
 
   try
     {
-      DANCE_DEBUG (9, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_TRACE, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
                     ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
                     ACE_TEXT ("Creating the \"Repository\" POA.\n")));
 
@@ -328,7 +339,7 @@ DAnCE_TargetManager_Module::create_poas (void)
     }
   catch (const PortableServer::POA::AdapterAlreadyExists &)
     {
-      DANCE_DEBUG (8, (LM_INFO, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
+      DANCE_TRACE_LOG (DANCE_LOG_TRACE, (LM_INFO, DLINFO ACE_TEXT ("DAnCE_TargetManager_Module::create_poas - ")
                     ACE_TEXT ("Using existing \"Repository\" POA\n")));
       this->rm_poa_ = this->root_poa_->find_POA ("Repository", 0);
     }
